<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/ic_person"
            android:title="@string/item_inicio" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/ic_refresh"
            android:title="@string/item_cuenta" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/ic_lista"
            android:title="@string/item_categorias" />
        <item
            android:id="@+id/item_configuracion"
            android:icon="@drawable/ic_lista"
            android:title="@string/item_configuracion" />
    </group>

</menu>