<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@android:drawable/ic_partial_secure" />

            <TextView
                android:id="@+id/dtIdusuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/icono"
                android:text="@string/id_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icono_indicador_derecho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pencil"
                app:tint="@color/black" />

        </RelativeLayout>

        <TableLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/colonia"

                    android:hint="Id venta"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView

                    android:id="@+id/dtDireccion"

                    android:layout_column="2"
                    android:gravity="center"
                    android:hint="@string/Direccion"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:ignore="TextViewEdits" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/dtTelefono"

                    android:hint="@string/telefono"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/tvIdVenta"

                    android:layout_column="2"
                    android:gravity="center"
                    android:hint="Id venta"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView

                    android:id="@+id/dtTotalVenta"

                    android:layout_column="3"
                    android:hint="@string/Direccion"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="20sp"
                    tools:ignore="TextViewEdits" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>