<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/espacio_norma_1">

            <androidx.cardview.widget.CardView
                card_view:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/espacio_norma_1">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_perfil"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"

                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_person" />



                    <TextView
                        android:id="@+id/texto_foto_perfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toRightOf="@+id/img_perfil"
                        android:text="@string/texto_cambiar_contrasena"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/ic_cambiar_imagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_menu_camera" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titulo_informacion_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/etiqueta_info_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:padding="@dimen/espacio_norma_1"
                    android:rowCount="2">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/espacio_norma_2"
                        android:layout_marginBottom="32dp"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/texto_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="32dp"
                        android:text="James Revelo"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/espacio_norma_2"
                        android:layout_marginBottom="32dp"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/texto_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="32dp"
                        android:text="James Revelo"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/imageview_telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/espacio_norma_2"
                        android:layout_marginBottom="32dp"
                        android:src="@drawable/ic_telefono" />

                    <TextView
                        android:id="@+id/texto_telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="32dp"
                        android:text="66 666 66"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/texto_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="james@mail.com"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </GridLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titulo_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/espacio_norma_1"

                android:paddingBottom="@dimen/espacio_norma_2"
                android:text="@string/etiqueta_contrasena"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/espacio_norma_1">

                    <ImageView
                        android:id="@+id/icono_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@android:drawable/ic_partial_secure" />

                    <TextView
                        android:id="@+id/texto_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toRightOf="@+id/icono_password"
                        android:text="@string/texto_cambiar_contrasena"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/icono_indicador_derecho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_lista" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titulo_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/espacio_norma_1"
                android:paddingBottom="@dimen/espacio_norma_2"
                android:text="@string/etiqueta_direccion"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/icono_direccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_marker" />

                    <TextView
                        android:id="@+id/texto_direccion_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toRightOf="@+id/icono_direccion"
                        android:text="@string/texto_cambiar_direccion"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <ImageView
                        android:id="@+id/icono_editar_derecho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_pencil"
                        card_view:tint="#0B0A0A" />

                    <TextView
                        android:id="@+id/tv_direccion_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icono_direccion"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="16dp"
                        android:text="@string/texto_cambiar_direccion"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
